Fri Oct 17 21:22:55 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/transport/tcp/TcpTransport.cpp:

          Fix some bugs with IPv6 addresses.

        * tests/DCPS/BidirMessenger/pubsub_ipv6.ini:
        * tests/DCPS/Messenger/pub_ipv6.ini:
        * tests/DCPS/Messenger/sub_ipv6.ini:
        * tests/DCPS/RecorderReplayer/pub_ipv6.ini:
        * tests/DCPS/RecorderReplayer/relay_ipv6.ini:
        * tests/DCPS/ZeroCopyDataReaderListener/pub_ipv6.ini:

          Fix some problems with IPv6 addresses used in these tests.


Thu Oct 16 21:19:37 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/LargeSample/run_test.pl:
        * tests/DCPS/ManualAssertLiveliness/run_test.pl:

          Log level changes

Thu Oct 16 19:18:34 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/InfoRepo/DCPS_IR_Publication.cpp:
        * dds/InfoRepo/DCPS_IR_Subscription.cpp:
        * dds/InfoRepo/InfoRepoMulticastResponder.cpp:

          Change a number of debug statements from using TAO_debug_level
          to OpenDDS::DCPS::DCPS_debug_level.

Mon Oct 13 16:30:43 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * bin/dcps_tests.lst:

          Don't run RTPS tests on mosquito with no BITs

        * tests/DCPS/Compiler/idl_test1_main/main.cpp:
        * tests/DCPS/Compiler/idl_test3_main/main.cpp:
        * tests/DCPS/ConfigTransports/publisher.cpp:
        * tests/DCPS/ConfigTransports/subscriber.cpp:

          Catch exceptions pointed out by Coverity

        * tools/modeling/codegen/model/Entities.cpp:

          Check return code pointed out by Coverity

Thu Oct  9 18:00:05 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * MPC/config/dcps.mpb:
        * dds/DCPS/InfoRepoDiscovery/InfoRepoDiscovery.mpc:
        * dds/monitor/monitor.mpc:

          Revert the previous two changes.  Changing the dependency on
          the TAO portable server library needs to be rethought.
