@@ -1,3 +1,9 @@
+Mon Oct 20 18:05:18 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
+
+        * tests/DCPS/ManualAssertLiveliness/publisher.cpp:
+
+          Sleep one second before deleting entities.
+
 Fri Oct 17 21:22:55 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>
 
         * dds/DCPS/transport/tcp/TcpTransport.cpp:
